--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@
 	\maketitle
 
 	\begin{abstract}
-		The development of Deeplearning models and techneques approches an extensive need for hardware support, where many of the new models are deep (in terms of number of layers and number of computation per layer whether they are nodes or channels) and are using big data for training, not to mention need to tune the hyper parameters which may need to re-do the training or part of it many times. Thus, many number systems were introduced as an alternative to the IEEE floating-point formats as hardware friendly systems faster and/or more accurate in computation. However, the hardware design and verify process is complex and expensive, hence, these number systems should be tested before moving on with designing. Because most deeplearning frameworks and libraries target AI production, they only support the IEEE formats. Therefore, this package was design with rapid prototyping and number systems test in mind. It provides a fast way of design, train and evaluate a deeplearning model with new number system(s).
+		The development of Deeplearning models and techniques approaches an extensive need for hardware support, where many of the new models are deep (in terms of number of layers and number of computation per layer whether they are nodes or channels) and are using big data for training. Furthermore, there is the need to tune the hyper parameters which may need to re-do the training or part of it many times. Thus, many number systems were introduced as an alternative to the IEEE floating-point formats as hardware-friendly systems faster and/or more accurate in computation. However, the hardware design and verification process is complex and expensive. Hence, these number systems should be tested before moving on with design. Because most deeplearning frameworks and libraries target AI production, they only support the IEEE formats. this package was designed with rapid prototyping and number systems test in mind. It provides a fast way of design, train and evaluate a deeplearning model with new number system(s).
 	\end{abstract}
 
 	\input{introduction}
@@ -55,7 +55,7 @@
 	
 	\input{futurework}
 %	\includestandalone[subpreambles=true]{00-FCLayer-FashionMNIST/00-FCLayer-FashionMNIST}
-	\input{appendices}
+	%\input{appendices}
 	
 	\bibliographystyle{IEEEtran}
 	\bibliography{IEEEabrv,main}
