--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,7 @@
 \section{Introduction}
 
-\IEEEPARstart{M}{any} new and old number systems have been introduced as a better alternative to IEEE-754 standards\cite{754} in the field of Deeplearning.
+%\IEEEPARstart{M}{any}
+Many new and old number systems have been introduced as a better alternative to IEEE-754 standards\cite{754} in the field of Deeplearning.
 
 \subsection{Examples of Number Systems Used in Deeplearning}
 
