add label to subsection

--- a/body.tex
+++ b/body.tex
@@ -59,7 +59,7 @@ where \mintinline[fontsize=\footnotesize]{julia}{X_train} is the train array or 
 
 %A group of examples can be found in Appendices.
 
-\subsection{Structure and Architecture}
+\subsection{Structure and Architecture}\label{subsec:saa}
 
 The structure of NumNN.jl is simple enough to comprehend in few minutes and to start amend in case any new element is needed to be added. \figurename\ref{fig:layerstruct} shows the Layers hierarchy in NumNN.jl, this structure was built to facilitate the use and the future development of NumNN.jl.
 
