--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 %\documentclass[onecolumn,draftcls,12pt,conference]{IEEEtran}
 \documentclass{article}
 \usepackage[nonatbib]{neurips_2020}
+%\usepackage{natbib}
 \usepackage[utf8]{inputenc}
 
 \usepackage{IEEEtrantools}
@@ -12,7 +13,7 @@
 \usepackage{framed}
 
 \usepackage[hidelinks]{hyperref}
-\usepackage{cite}
+%\usepackage{cite}
 
 \usepackage{caption}
 %\usepackage{graphicx}
@@ -33,7 +34,7 @@
 
 
 
-\title{NumNN.jl Deeplearning Package for Fast Testing and Simulating Number Systems on Neural Networks}
+\title{NumNN.jl Deeplearning Package for Rapid Testing and Simulating Number Systems on Neural Networks}
 
 \author{%\IEEEauthorblockN
 	{Mohammad~Hizzani}\\
@@ -67,5 +68,6 @@
 	%\input{appendices}
 	
 	\bibliographystyle{IEEEtran}
+	%\bibliographystyle{plainnat}
 	\bibliography{main}
 \end{document}
