--- a/main.bib
+++ b/main.bib
@@ -1,3 +1,104 @@
+@inproceedings{Juang2019,
+abstract = {In this paper, we have proposed area-delay product (ADP) efficient design for convolutional neural network (CNN) circuits using logarithmic number systems (LNS). By employing LNS-based schemes, the area overhead for large amount of conventional multipliers required in CNN circuits can be tremendously reduced. Simulation results show that our proposed design can achieve lower-error with almost 60{\%} ADP savings compared with the conventional multipliers-based design, which is suitable for deep learning applications.},
+address = {Daegu},
+author = {Juang, Tso Bing and Lin, Cong Yi and Lin, Guan Zhong},
+booktitle = {2018 International SoC Design Conference (ISOCC)},
+doi = {10.1109/ISOCC.2018.8649961},
+isbn = {978-1-5386-7960-9},
+keywords = {Computer arithmetic,Convolutional neural network (CNN),Deep learning,Logarithmic number system (LNS),VLSI design},
+pages = {170--171},
+publisher = {Institute of Electrical and Electronics Engineers Inc.},
+title = {{Area-Delay Product Efficient Design for Convolutional Neural Network Circuits Using Logarithmic Number Systems}},
+year = {2019}
+}
+@inproceedings{Dimitrov2001,
+abstract = {A recently introduced double-base number representation tins proved to be successful in improving the performance of several algorithms in cryptography and digital signal processing. The index-calculus version of this number system can be regarded as a two-dimensional extension of the classical logarithmic number system. This paper builds on previous special results by generalizing the number system both in multiple dimensions (multiple bases) and by the use of multiple digits. Adopting both generalizations we show that large reductions in hardware complexity are achievable compared to an equivalent precision logarithmic number system.},
+author = {Dimitrov, V. S. and Eskritt, J. and Imbert, L. and Jullien, G. A. and Miller, W. C.},
+booktitle = {15th IEEE Symposium on Computer Arithmetic. ARITH-15 2001},
+doi = {10.1109/arith.2001.930126},
+issn = {1063-6889},
+pages = {247--254},
+title = {{The use of the multi-dimensional logarithmic number system in DSP applications}},
+year = {2001}
+}
+@article{Lewis1995,
+abstract = {An arithmetic core for DSP applications, comprising two multiplier/dividers and an adder/subtractor, using logarithmic number system (LNS) arithmetic, is described. For most operands, precision better than the worst-case precision of IEEE-754 is obtained. Three operations per cycle are performed using 69k transistors integrated in a 16 mm2 core in 1.2 µm CMOS, offering better performance than the best previous result in only 43{\%} of the area. The use of a new interleaved memory ROM structure and a second-order function interpolator are the key techniques that result in reduced area. This modest area allows several core units to be integrated on a chip for high performance DSP applications. {\textcopyright} 1995 IEEE},
+author = {Lewis, David M.},
+doi = {10.1109/4.482205},
+issn = {1558-173X},
+journal = {IEEE Journal of Solid-State Circuits},
+number = {12},
+pages = {1547--1553},
+title = {{114 MFLOPS Logarithmic Number System Arithmetic Unit for DSP Applications}},
+volume = {30},
+year = {1995}
+}
+@phdthesis{Hizzani2019,
+author = {Hizzani, Mohammad},
+booktitle = {Princess Sumaya University for Technology},
+school = {Princess Sumaya University for Technology},
+title = {{Design of a Modular Multiplier for Public-Key Cryptography Applications Using Residue Number System and Signed-Digit Representation}},
+year = {2019}
+}
+@inproceedings{DiClaudio1990,
+abstract = {Fast RNS (residue number system) algorithms which use only binary arithmetic are developed. Scaled residues, called pseudoresidues, are introduced by exploiting the cycle properties of each RNS channel and solving a Diophantine equation. Using the pseudoresidues instead of the original residue set to perform the desired computations, an RNS processor can be built with standard binary devices of small wordlength. The effectiveness of the procedure is shown by developing the pseudoresidue implementations of a modular multiplier for odd moduli RNS and of a FIR (finite impulse response) filter. The resulting structures exhibit complete reprogrammability for both moduli and coefficients, a very low number of fast machine cycles, and a square time-area product reduction.},
+author = {{Di Claudio}, E. D. and Orlandi, G. and Piazza, F.},
+booktitle = {International Conference on Acoustics, Speech, and Signal Processing},
+doi = {10.1109/icassp.1990.115701},
+issn = {1520-6149},
+pages = {1531--1534},
+title = {{Fast RNS DSP algorithms implemented with binary arithmetic}},
+volume = {3},
+year = {1990}
+}
+@inproceedings{Chaves2003,
+abstract = {This paper is focused on low power programmable fast digital signal processors (DSP) design based on a configurable 5-stage RISC core architecture and on residue number systems (RNS). Several innovative aspects are introduced at the control and datapath architecture levels, which support both the binary system and the RNS. A new moduli set {\{}2n-1, 22n, 2n+1{\}} is also proposed for balancing the processing time in the different RNS channels. Experimental results, obtained trough RDSP implementation on FPGA and ASIC, show that not only a significant reduction in circuit area and power consumption but also a speedup may be achieved with RNS when compared with a binary DSP.},
+author = {Chaves, R. and Sousa, L.},
+booktitle = {Proceedings - Euromicro Symposium on Digital System Design, DSD 2003},
+doi = {10.1109/DSD.2003.1231911},
+isbn = {0769520030},
+pages = {128--135},
+publisher = {Institute of Electrical and Electronics Engineers Inc.},
+title = {{RDSP: A RISC DSP based on residue number system}},
+year = {2003}
+}
+@inproceedings{Cardarilli2007,
+abstract = {In previous works ([1]-[8]) we performed different experiments implementing FIR filtering structures. Each filter was implemented using both the Two's Complement System (TCS) and the Residue Number System (RNS) number representations. The comparison of these two implementations allows to conclude that, for these applications, the RNS uses less power than the TCS counterpart. The aim of the present paper is to highlight the reasons of this power consumption reduction. {\textcopyright} 2007 IEEE.},
+author = {Cardarilli, Gian Carlo and Nannarelli, Alberto and Re, Marco},
+booktitle = {Conference Record - Asilomar Conference on Signals, Systems and Computers},
+doi = {10.1109/ACSSC.2007.4487461},
+isbn = {9781424421107},
+issn = {10586393},
+pages = {1412--1416},
+publisher = {IEEE Computer Society},
+title = {{Residue number system for low-power DSP applications}},
+year = {2007}
+}
+@article{Jullien1987,
+abstract = {In current high-speed digital signal-processing (DSP) architectures, the Residue Number System (RNS) has an important role to play. RNS implementations have a highly modular structure, and are not dependent upon large binary arithmetic elements. RNS implementations become more attractive when combined with the advantages offered by VLSI fabrication technology. In this paper, a novel design methodology has been developed for RNS structures, based on using look-up tables, which takes into consideration the unique features and requirements of RNS. The paper discusses the following three phases: 1) developing a look-up table layout model, which is used to derive relationships between the size of each modulus and both chip area and time; this model supports all types of moduli; 2) selecting the most efficient layout according to the design requirements; the procedure allows the designer to control the area, time, or the configuration of the memory module required for implementing a modulo look-up table; 3) proposing a set of multi-look-up table modules; to be used as building block units for implementing digital signal-processing architectures. The paper uses two examples to illustrate the use of the modules in phase 3). {\textcopyright} 1987 IEEE},
+author = {Jullien, Graham A. and Miller, William C.},
+doi = {10.1109/TCS.1987.1086188},
+issn = {0098-4094},
+journal = {IEEE Transactions on Circuits and Systems},
+number = {6},
+pages = {604--616},
+title = {{A Look-Up Table VLSI Design Methodology for RNS Structures Used in DSP Applications}},
+volume = {34},
+year = {1987}
+}
+@article{Claudio1995,
+abstract = {It is known that RNS VLSI processors can parallelize fixed-point addition and multiplication operations by the use of the Chinese Remainder Theorem (CRT). The required modular operations, however, must use specialized hardware whose design and implementation can create several problems. In this paper a modified residue arithmetic, called pseudo-RNS is introduced in order to alleviate some of the RNS problems when Digital Signal Processing (DSP) structures are implemented. Pseudo-RNS requires only the use of modified binary processors and exhibits a speed performance comparable with other RNS traditional approaches. Some applications of the pseudo-RNS to common DSP architectures, such as multipliers and filters, are also presented in this paper. They are compared in terms of the Area-Time Square product versus other RNS and weighted binary structures. It is proven that existing combinatorial or look-up table approaches for RNS are tailored to small designs or special applications, while the pseudo-RNS approach remains competitive also for complex systems. {\textcopyright} 1995 IEEE},
+author = {Claudio, Elio D.Di and Piazza, Francesco and Orlandi, Gianni},
+doi = {10.1109/12.381948},
+issn = {0018-9340},
+journal = {IEEE Transactions on Computers},
+keywords = {Binary multipliers,VLSI processors,digital signal processing,mixed radix arithmetic,parallel architectures,pseudo-residue,residue number system,systolic arrays},
+number = {5},
+pages = {624--633},
+title = {{Fast Combinatorial RNS Processors for DSP Applications}},
+volume = {44},
+year = {1995}
+}
 @inproceedings{Szegedy2016,
 abstract = {Convolutional networks are at the core of most state of-the-art computer vision solutions for a wide variety of tasks. Since 2014 very deep convolutional networks started to become mainstream, yielding substantial gains in various benchmarks. Although increased model size and computational cost tend to translate to immediate quality gains for most tasks (as long as enough labeled data is provided for training), computational efficiency and low parameter count are still enabling factors for various use cases such as mobile vision and big-data scenarios. Here we are exploring ways to scale up networks in ways that aim at utilizing the added computation as efficiently as possible by suitably factorized convolutions and aggressive regularization. We benchmark our methods on the ILSVRC 2012 classification challenge validation set demonstrate substantial gains over the state of the art: 21:2{\%} top-1 and 5:6{\%} top-5 error for single frame evaluation using a network with a computational cost of 5 billion multiply-adds per inference and with using less than 25 million parameters. With an ensemble of 4 models and multi-crop evaluation, we report 3:5{\%} top-5 error and 17:3{\%} top-1 error on the validation set and 3:6{\%} top-5 error on the official test set.},
 archivePrefix = {arXiv},
@@ -12,7 +113,7 @@ issn = {10636919},
 pages = {2818--2826},
 publisher = {IEEE Computer Society},
 title = {{Rethinking the Inception Architecture for Computer Vision}},
-volume = {2016-December},
+volume = {2016-Decem},
 year = {2016}
 }
 @misc{JuliaMehtods,
@@ -105,11 +206,23 @@ title = {{Res-DNN: A residue number system-based DNN accelerator unit}},
 volume = {67},
 year = {2020}
 }
+@article{Miyashita2016,
+abstract = {Recent advances in convolutional neural networks have considered model complexity and hardware efficiency to enable deployment onto embedded systems and mobile devices. For example, it is now well-known that the arithmetic operations of deep networks can be encoded down to 8-bit fixed-point without significant deterioration in performance. However, further reduction in precision down to as low as 3-bit fixed-point results in significant losses in performance. In this paper we propose a new data representation that enables state-of-the-art networks to be encoded to 3 bits with negligible loss in classification performance. To perform this, we take advantage of the fact that the weights and activations in a trained network naturally have non-uniform distributions. Using non-uniform, base-2 logarithmic representation to encode weights, communicate activations, and perform dot-products enables networks to 1) achieve higher classification accuracies than fixed-point at the same resolution and 2) eliminate bulky digital multipliers. Finally, we propose an end-to-end training procedure that uses log representation at 5-bits, which achieves higher final test accuracy than linear at 5-bits.},
+archivePrefix = {arXiv},
+arxivId = {1603.01025},
+author = {Miyashita, Daisuke and Lee, Edward H. and Murmann, Boris},
+eprint = {1603.01025},
+file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Miyashita, Lee, Murmann - 2016 - Convolutional Neural Networks using Logarithmic Data Representation.pdf:pdf},
+month = {mar},
+title = {{Convolutional Neural Networks using Logarithmic Data Representation}},
+url = {http://arxiv.org/abs/1603.01025},
+year = {2016}
+}
 @article{Gustafson2017,
 abstract = {A new data type called a posit is designed as a direct drop-in replacement for IEEE Standard 754 floating-point numbers (floats). Unlike earlier forms of universal number (unum) arithmetic, posits do not require interval arithmetic or variable size operands; like floats, they round if an answer is inexact. However, they provide compelling advantages over floats, including larger dynamic range, higher accuracy, better closure, bitwise identical results across systems, simpler hardware, and simpler exception handling. Posits never overflow to infinity or underflow to zero, and "Nota- Number" (NaN) indicates an action instead of a bit pattern. A posit processing unit takes less circuitry than an IEEE float FPU. With lower power use and smaller silicon footprint, the posit operations per second (POPS) supported by a chip can be significantly higher than the FLOPS using similar hardware resources. GPU accelerators and Deep Learning processors, in particular, can do more per watt and per dollar with posits, yet deliver superior answer quality. A comprehensive series of benchmarks compares floats and posits for decimals of accuracy produced for a set precision. Low precision posits provide a better solution than "approximate computing" methods that try to tolerate decreased answer quality. High precision posits provide more correct decimals than floats of the same size; in some cases, a 32-bit posit may safely replace a 64-bit float. In other words, posits beat floats at their own game.},
 author = {Gustafson, John L. and Yonemoto, Isaac},
 doi = {10.14529/jsfi170206},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/John L. Gustafson, Isaac Yonemoto - 2017 - Beating floating point at its own game Posit arithmetic.pdf:pdf},
+file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Gustafson, Yonemoto - 2017 - Beating floating point at its own game Posit arithmetic.pdf:pdf},
 issn = {2313-8734},
 journal = {Supercomputing Frontiers and Innovations},
 keywords = {Computer arithmetic,Energy-efficient computing,Floating point,LINPACK,Linear algebra,Neural networks,Posits,Unum computing,Valid arithmetic},
@@ -128,6 +241,44 @@ publisher = {IEEE},
 title = {{754-2019 - IEEE Standard for Floating-Point Arithmetic}},
 year = {2019}
 }
+@article{Schinianakis2014,
+abstract = {A design methodology for incorporating Residue Number System (RNS) and Polynomial Residue Number System (PRNS) in Montgomery modular multiplication in GF(p) or GF(2n) respectively, as well as a VLSI architecture of a dual-field residue arithmetic Montgomery multiplier are presented in this paper. An analysis of input/output conversions to/from residue representation, along with the proposed residue Montgomery multiplication algorithm, reveals common multiply-accumulate data paths both between the converters and between the two residue representations. A versatile architecture is derived that supports all operations of Montgomery multiplication in GF(p) and GF(2n), input/output conversions, Mixed Radix Conversion (MRC) for integers and polynomials, dual-field modular exponentiation and inversion in the same hardware. Detailed comparisons with state-of-the-art implementations prove the potential of residue arithmetic exploitation in dual-field modular multiplication.},
+author = {Schinianakis, Dimitrios and Stouraitis, Thanos},
+doi = {10.1109/TCSI.2013.2283674},
+file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Schinianakis, Stouraitis - 2014 - Multifunction Residue Architectures for Cryptography.pdf:pdf},
+journal = {IEEE Transactions on Circuits and Systems I: Regular Papers},
+number = {4},
+pages = {1156--1169},
+title = {{Multifunction Residue Architectures for Cryptography}},
+volume = {61},
+year = {2014}
+}
+@article{Asif2018a,
+abstract = {This work proposes a residue number system (RNS) based hardware architecture of an elliptic curve cryptography (ECC) processor over prime field. The processor computes point multiplication in Jacobian coordinates by a combined architecture of point doubling and point addition. An optimized modular reduction architecture is also presented that achieves low area by dividing the RNS moduli in small groups and processes the groups one by one. The proposed ECC processor is generic and supports any random curve over Fp256. The implementation on Virtex-7 and Virtex-6 FPGAs shows comparable performance to the state-of-the-art binary and RNS based ECC processors.},
+author = {Asif, Shahzad and Hossain, Md Selim and Kong, Yinan and Abdul, Wadood},
+doi = {10.1016/J.VLSI.2017.11.010},
+issn = {0167-9260},
+journal = {Integration},
+pages = {138--149},
+publisher = {Elsevier},
+title = {{A Fully RNS based ECC Processor}},
+volume = {61},
+year = {2018}
+}
+@article{Antao2014,
+abstract = {Modular arithmetic is a building block for a variety of applications potentially supported on embedded systems. An approach to turn modular arithmetic more efficient is to identify algorithmic modifications that would enhance the parallelization of the target arithmetic in order to exploit the properties of parallel devices and platforms. The Residue Number System (RNS) introduces data-level parallelism, enabling the parallelization even for algorithms based on modular arithmetic with several data dependencies. However, the mapping of generic algorithms to full RNS-based implementations can be complex and the utilization of suitable hardware architectures that are scalable and adaptable to different demands is required. This paper proposes and discusses an architecture with scalability features for the parallel implementation of algorithms relying on modular arithmetic fully supported by the Residue Number System (RNS). The systematic mapping of a generic modular arithmetic algorithm to the architecture is presented. It can be applied as a high level synthesis step for an Application Specific Integrated Circuit (ASIC) or Field Programmable Gate Array (FPGA) design flow targeting modular arithmetic algorithms. An implementation with the Xilinx Virtex 4 and Altera Stratix II Field Programmable Gate Array (FPGA) technologies of the modular exponentiation and Elliptic Curve (EC) point multiplication, used in the Rivest-Shamir-Adleman (RSA) and (EC) cryptographic algorithms, suggests latency results in the same order of magnitude of the fastest hardware implementations of these operations known to date.},
+author = {Ant{\~{a}}o, Samuel and Sousa, Leonel},
+doi = {10.1007/s11265-014-0879-y},
+file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ant{\~{a}}o, Sousa - 2014 - A Flexible Architecture for Modular Arithmetic Hardware Accelerators based on RNS.pdf:pdf},
+issn = {19398115},
+journal = {Journal of Signal Processing Systems},
+keywords = {Cryptography,Electronic design automation (EDA),Embedded systems,Modular arithmetic,Residue number system (RNS)},
+number = {3},
+pages = {249--259},
+title = {{A Flexible Architecture for Modular Arithmetic Hardware Accelerators based on RNS}},
+volume = {76},
+year = {2014}
+}
 @inproceedings{Garner1959,
 address = {New York, New York, USA},
 author = {Garner, Harvey L.},
@@ -138,16 +289,4 @@ pages = {146--153},
 publisher = {ACM Press},
 title = {{The residue number system}},
 year = {1959}
-}
-@article{Miyashita2016,
-abstract = {Recent advances in convolutional neural networks have considered model complexity and hardware efficiency to enable deployment onto embedded systems and mobile devices. For example, it is now well-known that the arithmetic operations of deep networks can be encoded down to 8-bit fixed-point without significant deterioration in performance. However, further reduction in precision down to as low as 3-bit fixed-point results in significant losses in performance. In this paper we propose a new data representation that enables state-of-the-art networks to be encoded to 3 bits with negligible loss in classification performance. To perform this, we take advantage of the fact that the weights and activations in a trained network naturally have non-uniform distributions. Using non-uniform, base-2 logarithmic representation to encode weights, communicate activations, and perform dot-products enables networks to 1) achieve higher classification accuracies than fixed-point at the same resolution and 2) eliminate bulky digital multipliers. Finally, we propose an end-to-end training procedure that uses log representation at 5-bits, which achieves higher final test accuracy than linear at 5-bits.},
-archivePrefix = {arXiv},
-arxivId = {1603.01025},
-author = {Miyashita, Daisuke and Lee, Edward H. and Murmann, Boris},
-eprint = {1603.01025},
-file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Miyashita, Lee, Murmann - 2016 - Convolutional Neural Networks using Logarithmic Data Representation.pdf:pdf},
-month = {mar},
-title = {{Convolutional Neural Networks using Logarithmic Data Representation}},
-url = {http://arxiv.org/abs/1603.01025},
-year = {2016}
 }
